# Direct-Preference-Optimization-of-LLMs-for-Critical-Thinking

./: .gitignore  README.md  analysis.sh  download_models.sh  post_processing.py  pyproject.toml  run_preprocessing.sh  run_preprocessing_ukda4688.sh  submit_job_enrichment_self_consistency.slurm  submit_job_enrichment_self_consistency_sexual_health.slurm  submit_job_enrichment_self_consistency_ukda4688.slurm  submit_job_multi_agent_debate_llama_qwen.slurm  submit_job_multi_agent_debate_qwen.slurm  submit_job_reflective_questions_enrichment.slurm  submit_job_reflective_questions_enrichment_ukda4688.slurm
configs/: multi_agent_debate_llama_qwen.json  multi_agent_debate_qwen.json  reflective_questions_enrichment.json  reflective_questions_enrichment_ukda4688.json
docs/: enrichment_phase.md
prompts/debate/: llama_70b_debate_placeholder.txt  qwen_32b_debate_placeholder.txt  qwen_32b_turn1_initial_placeholder.txt  qwen_32b_turn3_revision_placeholder.txt  qwen_72b_debate_placeholder.txt  qwen_72b_turn2_response_placeholder.txt  qwen_72b_turn4_final_placeholder.txt
prompts/enrichment/: reflective_questions_enrichment.txt  reflective_questions_enrichment_ukda4688.txt  self_consistency_four_codes.txt  self_consistency_placeholder.txt  self_refine_critique_placeholder.txt  self_refine_initial_placeholder.txt  self_refine_revision_placeholder.txt
src/debate/: agents.py  aggregation.py  cli.py  compare.py  config.py  loaders.py  preflight.py  ranking.py  schema.py
src/dpo_critical_thinking/: __init__.py
src/dpo_critical_thinking/debate/: __init__.py  agents.py  cli.py  config.py  loaders.py  ranking.py  schema.py
src/enrichment/: __init__.py  cli.py  data.py  logging.py  prompts.py  resume.py  schema.py  strategies.py  teachers.py
src/preprocessing/: __init__.py  cli.py  exclusions.py  rtf.py
src/reflective_enrichment/: __init__.py  cli.py  config.py  loaders.py  runner.py  schema.py
tests/: test_debate_models.py  test_debate_ranking.py  test_enrichment_alignment.py  test_post_processing.py  test_reflective_enrichment.py  test_ukda4688_preprocessing.py
(+10 files in other folders)
